--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "test2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "tailwindcss": "^3.0.18"
-  }
+   "name": "test2",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "build:css": "tailwind build src/style.css -o dist/style.css"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "devDependencies": {
+      "tailwindcss": "^3.0.18"
+   }
 }
